--- a/proposta1/etapa1.html
+++ b/proposta1/etapa1.html
@@ -15,8 +15,8 @@
        <div class="sideMenu">
       <ul>
           <li id="picked">Proposta 1</li>
-          <li class="menuProposta"><a href="/proposta2/proposta2.html">Proposta 2</a></li>
-          <li class="menuProposta"><a href="/proposta3/proposta3.html">Proposta 3</a></li>
+          <li class="menuProposta"><a href="../proposta2/proposta2.html">Proposta 2</a></li>
+          <li class="menuProposta"><a href="../proposta3/proposta3.html">Proposta 3</a></li>
           </ul>
       </div>
 
