--- a/proposta2/proposta2teste.html
+++ b/proposta2/proposta2teste.html
@@ -14,9 +14,9 @@
       
        <div class="sideMenu">
       <ul>
-          <li class="menuProposta"><a href="/proposta1/proposta1.html">Proposta 1</a></li>
+          <li class="menuProposta"><a href="../proposta1/proposta1.html">Proposta 1</a></li>
           <li id="picked">Proposta 2</li>
-          <li class="menuProposta"><a href="/proposta3/proposta3.html">Proposta 3</a></li>
+          <li class="menuProposta"><a href="../proposta3/proposta3.html">Proposta 3</a></li>
           </ul>
       </div>
 
