--- a/proposta2/proposta2finalEtapa2.html
+++ b/proposta2/proposta2finalEtapa2.html
@@ -15,6 +15,14 @@
 	 	 <h1 class="uc">proposta 2 — CUT-UP | <span class="bold">etapa 2</span></h1>
 	 	 <h2 class="foot">Guilherme Vila Maior</h2>
 	  </div>
+	  
+	  <div class="sideMenu">
+      <ul>
+          <li class="menuProposta"><a href="../proposta1/proposta1.html">Proposta 1</a></li>
+          <li id="picked">Proposta 2</li>
+          <li class="menuProposta"><a href="../proposta3/proposta3.html">Proposta 3</a></li>
+          </ul>
+      </div>
       
 	  <div class="videos">
 			 <iframe  class="fin" src="https://www.youtube.com/embed/9_H_Z8M_L3E" allowfullscreen></iframe>
