--- a/proposta3/proposta3.html
+++ b/proposta3/proposta3.html
@@ -14,8 +14,8 @@
       
        <div class="sideMenu">
       <ul>
-          <li class="menuProposta"><a href="/proposta1/proposta1.html">Proposta 1</a></li>
-          <li class="menuProposta"><a href="/proposta2/proposta2.html">Proposta 2</a></li>
+          <li class="menuProposta"><a href="../proposta1/proposta1.html">Proposta 1</a></li>
+          <li class="menuProposta"><a href="../proposta2/proposta2.html">Proposta 2</a></li>
           <li id="picked">Proposta 3</li>
           </ul>
       </div>
